@@ -46,39 +46,41 @@ class BibData {
 	static std::vector<Glib::ustring> &getDocTypes ();
 	static Glib::ustring &getDefaultDocType ();
 
-	void print ();
+	void print () const;
 	void clear ();
 
 	void writeXML (std::ostringstream &out);
 	void parseCrossRefXML (Glib::ustring const &xml);
 	void getCrossRef ();
 	void getArxiv ();
+	
+	void mergeIn (BibData const &source);
 
 	typedef std::map <Glib::ustring, Glib::ustring, casefoldCompare> ExtrasMap;
 	ExtrasMap extras_;
 	void addExtra (Glib::ustring const &key, Glib::ustring const &value);
 	void clearExtras ();
-	ExtrasMap getExtras () {return extras_;}
+	ExtrasMap getExtras () const {return extras_;}
 	bool hasExtras () {return !extras_.empty();}
 
 	void setType (Glib::ustring const &type) {type_ = type;}
-	Glib::ustring getType () {return type_;}
+	Glib::ustring getType () const {return type_;} 
 	void setDoi (Glib::ustring const &doi) {doi_ = doi;}
-	Glib::ustring getDoi () {return doi_;}
+	Glib::ustring getDoi () const {return doi_;}
 	void setVolume (Glib::ustring const &vol) {volume_ = vol;}
-	Glib::ustring getVolume () {return volume_;}
+	Glib::ustring getVolume () const {return volume_;}
 	void setIssue (Glib::ustring const &issue) {issue_ = issue;}
-	Glib::ustring getIssue () {return issue_;}
+	Glib::ustring getIssue () const {return issue_;}
 	void setPages (Glib::ustring const &pages) {pages_ = pages;}
-	Glib::ustring getPages () {return pages_;}
+	Glib::ustring getPages () const {return pages_;}
 	void setAuthors (Glib::ustring const &authors) {authors_ = authors;}
-	Glib::ustring getAuthors () {return authors_;}
+	Glib::ustring getAuthors () const {return authors_;}
 	void setJournal (Glib::ustring const &journal) {journal_ = journal;}
-	Glib::ustring getJournal () {return journal_;}
+	Glib::ustring getJournal () const {return journal_;}
 	void setTitle (Glib::ustring const &title) {title_ = title;}
-	Glib::ustring getTitle () {return title_;}
+	Glib::ustring getTitle () const {return title_;}
 	void setYear (Glib::ustring const &year) {year_ = year;}
-	Glib::ustring getYear () {return year_;}
+	Glib::ustring getYear () const {return year_;}
 
 	void guessJournal (Glib::ustring const &raw);
 	void guessVolumeNumberPage (Glib::ustring const &raw);
